workloads/nginx/kustomize/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 3

  template:
    spec:
      containers:
        - name: nginx

          # TODO: We should do some proper monitoring to select reasonable values.
          resources:
            requests:
              cpu: 100m
              memory: 64Mi

            limits:
              cpu: 500m
              memory: 128Mi
