workloads/nginx/kustomize/overlays/prod/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: nginx-http

spec:
  hostnames:
    - nginx.sidewinder.lan

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: nginx-https

spec:
  hostnames:
    - nginx.sidewinder.lan
